# DSCI-532_2025_4_vdash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/processed/: cleaned_cars_df.csv  cleaned_cars_df.parquet
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: cleaned_data_prep.ipynb  data_prep_and_eda.ipynb
reports/: m1_proposal.md  m2-reflection.md  m3-reflection.md  m4-reflection.md  reflection.md
src/: app.py  callbacks.py  components.py  data.py  layout.py
src/components/: __init__.py  inputs.py  outputs.py  structural_elements.py
src/vdash/: __init__.py
tests/: test_data.py  test_outputs.py  test_vdash.py
